--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
-agp = "8.4.1"
+agp = "8.2.2"
 coilCompose = "2.6.0"
+glassmorphicComposables = "0.0.7"
 gson = "2.10.1"
 koinVersion = "3.5.3"
 kotlin = "2.0.0"
@@ -20,8 +21,11 @@ jetbrainsKotlinJvm = "1.9.24"
 navigationCompose = "2.7.7"
 roomVersion = "2.6.1"
 serializationVersion = "1.6.3"
+materialIconsExtended = "1.6.7"
+
 
 [libraries]
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-room-common = { module = "androidx.room:room-common", version.ref = "roomVersion" }
@@ -61,3 +65,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "jetbrainsKotlinJvm" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+#jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose-plugin" }
