--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ navigationCompose = "2.7.7"
 roomVersion = "2.6.1"
 serializationVersion = "1.6.3"
 materialIconsExtended = "1.6.7"
+playServicesLocation = "21.3.0"
 
 
 [libraries]
@@ -58,6 +59,7 @@ ktor-client-json = { module = "io.ktor:ktor-client-json", version.ref = "ktorVer
 ktor-client-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktorVersion" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktorVersion" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
